# daxa

./: .gitmodules
crates/daxa/: Cargo.toml
crates/daxa-rs/: Cargo.toml
crates/daxa-rs/src/: lib.rs
crates/daxa-rs/src/example/: hello_triangle.glsl  hello_triangle.rs  hello_triangle_shared.rs
crates/daxa-sys/: Cargo.toml  build.rs
crates/daxa-sys/src/: daxa.h
crates/daxa/src/: lib.rs
crates/daxa/src/example/: deez  hello_triangle.rs  hello_triangle_shared.inl
